# CutomerRAG

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Makefile  POTENTIAL_BUGS.md  README.md  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: ci.yml  docker-publish.yml
app/: auth.py  config.py  logging_config.py  main.py  rate_limiter.py
app/routers/: auth.py  documents.py
apps/: .env.example
apps/api/: .env.example  main.py  pyproject.toml
apps/api/app/: config.py  db.py  logging_config.py  main.py  rate_limiter.py  schemas.py
apps/api/app/routers/: auth.py  chat.py  documents.py
apps/api/app/services/: rag_chat.py
apps/chunk_worker/: .env.example  main.py  pyproject.toml
apps/chunk_worker/app/: config.py
apps/chunk_worker/app/providers/: external.py  local.py
apps/chunk_worker/app/services/: embeddings.py
apps/embedding_sync_worker/: .env.example  main.py  pyproject.toml
apps/embedding_sync_worker/app/: config.py  poller.py
apps/embedding_sync_worker/app/utils/: constants.py  logging.py
apps/external_chunk_worker/: main.py  pyproject.toml
apps/external_chunk_worker/app/: config.py  poller.py
apps/external_chunk_worker/app/utils/: logging.py
apps/local_chunk_worker/: .env.chunk_worker.example  main.py  pyproject.toml
apps/local_chunk_worker/app/: config.py  embeddings.py
apps/local_chunk_worker/app/utils/: logging.py
apps/rag-ingestion-worker/: main.py  pyproject.toml
apps/rag-ingestion-worker/app/: config.py  processor.py
apps/rag-ingestion-worker/app/utils/: chunking.py
apps/rag-polling-worker/: main.py  pyproject.toml
apps/rag-polling-worker/app/: config.py  poller.py
apps/rag_ingestion_worker/: main.py  pyproject.toml
apps/rag_ingestion_worker/app/: config.py  processor.py
apps/rag_ingestion_worker/app/utils/: logging.py
apps/rag_parser_polling/app/: config.py
apps/rag_parser_polling/app/utils/: constants.py
apps/rag_poller/: pyproject.toml
apps/rag_poller/app/: poller.py
apps/rag_s3_ingestion/: __init__.py  main.py  pyproject.toml
apps/rag_s3_ingestion/app/: config.py
apps/ragas_eval_worker/: .env.example  main.py  pyproject.toml
apps/ragas_eval_worker/app/: config.py  poller.py
apps/ragas_eval_worker/app/utils/: logging.py
apps/s3_ingestion/: .env.example  main.py  pyproject.toml
apps/s3_ingestion/app/: config.py  processor.py
infra/: README.md
infra/docker/: .dockerignore  Dockerfile
infra/kubernetes/base/: api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  worker-deployment.yaml
infra/kubernetes/overlays/prod/: kustomization.yaml
k6/: breakpoint_test.js  config.js  helpers.js  load_test.js  stress_test.js
k6/apis/: chat.js  confirm.js  list_documents.js  me.js  presigned_url.js  regenerate.js  signin.js  signup.js
