[project]
name = "ragprod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==5.0.0",
    "boto3==1.42.97",
    "fastapi==0.128.8",
    "pydantic==2.13.4",
    "pydantic-settings==2.11.0",
    "pyjwt==2.12.1",
    "pymongo==4.17.0",
    "requests==2.32.5",
    "uvicorn[standard]==0.39.0",
]
