[project]
name = "ragprod"
version = "0.1.0"
description = "Production-grade RAG platform"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "bcrypt>=5.0.0",
    "pyjwt>=2.10.1",
    "cohere==5.21.1",
    "fastembed==0.8.0",
    "fastapi>=0.136.1",
    "google-genai==2.5.0",
    "numpy==2.4.6",
    "qdrant-client==1.18.0",
    "tenacity==9.1.4",
    "uvicorn[standard]>=0.39.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=7.0.0",
    "boto3==1.43.0",
    "aioboto3==7.0.0",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.0",
    "pymongo>=4.17.0",
]

[tool.uv]
managed = true