[project]
name = "ragprod"
version = "0.1.0"
description = "Production-grade RAG platform"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "bcrypt>=5.0.0",
    "pyjwt>=2.10.1",
    "cohere==5.21.1",
    "fastembed>=0.3.0",
    "fastapi>=0.136.1",
    "google-genai==2.5.0",
    "numpy>=1.26.0",
    "qdrant-client>=1.15.0",
    "tenacity>=8.1.0",
    "uvicorn[standard]>=0.39.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=7.0.0",
    "boto3==1.43.0",
    "aioboto3==7.0.0",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.0",
    "pymongo>=4.17.0",
    "contracts",
    "observability",
]

[tool.uv]
managed = true

[tool.uv.sources]
contracts = { workspace = true }
observability = { workspace = true }