[project]
name = "rag-chunk-worker"
version = "0.1.0"
description = "Unified chunk worker for local and external document chunking"
requires-python = ">=3.12"
dependencies = [
    "llama-index-core==0.14.22",
    "llama-index-readers-s3==0.6.1",
    "pymongo==4.17.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.11.0",
    "redis>=7.4.0",
    "boto3==1.43.0",
    "google-genai==2.5.0",
    "httpx[http2]>=0.28.1",
    "contracts",
    "observability",
    "rag_queue"
]

[tool.uv]
managed = true

[tool.uv.sources]
contracts = { workspace = true }
observability = { workspace = true }
rag_queue = { workspace = true }
