[project]
name = "rag-poller"
version = "0.1.0"
description = "Landing AI Task Poller and Chunk Ingestor Worker"
requires-python = ">=3.13"
dependencies = [
    "pymongo==4.17.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.11.0",
    "httpx[http2]>=0.28.1",
    "google-genai>=2.5.0",
]

[tool.uv]
managed = true
