[project]
name = "rag-chunk-worker"
version = "0.1.0"
description = "Dedicated Redis Stream chunk worker for internal document processing"
requires-python = ">=3.13"
dependencies = [
    "llama-index-core==0.14.22",
    "llama-index-readers-s3==0.6.1",
    "pymongo==4.17.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.11.0",
    "redis>=7.4.0",
    "boto3==1.42.97",
    "google-genai==2.5.0",
]

[tool.uv]
managed = true
