[project]
name = "rag-ingestion-worker"
version = "0.1.0"
description = "Hardened Production RAG Ingestion Worker"
requires-python = ">=3.13"
dependencies = [
    "aioboto3==7.0.0",
    "boto3>=1.43.0",
    "motor==3.7.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.11.0",
    "redis>=7.4.0",
]

[tool.uv]
managed = true
