[project]
name = "rag-ingestion-worker"
version = "0.1.0"
description = "Hardened Production RAG Ingestion Worker"
requires-python = ">=3.13"
dependencies = [
    "aioboto3",
    "pymongo==4.17.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.11.0",
    "redis>=7.4.0",
    "httpx[http2]>=0.26.0",
]

[tool.uv]
managed = true
