[project]
name = "ragas-eval-worker"
version = "0.1.0"
description = "Dedicated offline RAGAS evaluation worker for CustomerRAG traces"
requires-python = ">=3.12"
dependencies = [
    "google-genai==2.5.0",
    "pymongo==4.17.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.11.0",
    "ragas>=0.4.0,<0.5.0",
    "langchain<0.3.0",
    "langchain-community<0.3.0",
    "langchain-google-vertexai<2.0.0",
    "contracts",
    "observability",
]

[tool.uv]
managed = true

[tool.uv.sources]
contracts = { workspace = true }
observability = { workspace = true }
